# vinit

./: .gitignore  README.md  a.out  meson.build  meson_options.txt
doc/: inittab.md  install.md  main.md  openrc.md  vinit-daemonutil.md  vinit-logger.md
doc/linuxrc/: configuration.md  installation.md  logs.md  main.md  networking.md
init/: all.h  inittab.c  main.c  sigchld.c  util.c
initreq/: halt.c  initreq.c  poweroff.c  reboot.c
linuxrc/: inittab  rc.conf  rc.halt.sh  rc.sh
linuxrc/rc.conf.d/: lightdm.conf  network
linuxrc/rc.d/: dbus  elogind  lightdm  network  sddm  udevd
vinit-daemonutil/: all.h  checkpid.c  main.c  start.c  stop.c  util.c
vinit-logger/: main.c
